changed button text

--- a/src/languages/deutsch.json
+++ b/src/languages/deutsch.json
@@ -22,7 +22,7 @@
   "projects": {
     "header": "Projekte",
     "btnWebsite" : "Website öffnen",
-    "btnSource": "Quellcode",
+    "btnSource": "Quellcode und Beschreibung",
     "btnMore": "Mehr Projekte",
 
     "lavander": {
