--- a/src/languages/hrvatski.json
+++ b/src/languages/hrvatski.json
@@ -22,7 +22,7 @@
   "projects": {
     "header": "Projekti",
     "btnWebsite" : "Otvori Web stranicu",
-    "btnSource": "Izvorni kod",
+    "btnSource": "Izvorni kod i opis",
     "btnMore": "Više projekata",
 
     "lavander": {
