minor text change

--- a/src/languages/deutsch.json
+++ b/src/languages/deutsch.json
@@ -20,7 +20,7 @@
     "tools": "Werkzeuge:"
   },
   "projects": {
-    "header": "Projekte",
+    "header": "Letzte Projekte",
     "btnWebsite" : "Website öffnen",
     "btnSource": "Quellcode und Beschreibung",
     "btnMore": "Mehr Projekte",
