--- a/src/languages/hrvatski.json
+++ b/src/languages/hrvatski.json
@@ -20,7 +20,7 @@
     "tools": "Alati:"
   },
   "projects": {
-    "header": "Projekti",
+    "header": "Nedavni projekti",
     "btnWebsite" : "Otvori Web stranicu",
     "btnSource": "Izvorni kod i opis",
     "btnMore": "Više projekata",
