added 2 new projects

--- a/src/languages/deutsch.json
+++ b/src/languages/deutsch.json
@@ -44,6 +44,16 @@
       "header": "Mehr Projekte",
       "paragraph": "Schauen Sie sich mehr von meiner Projekte an",
       "alt": "Github"
+    },
+    "trafalgar": {
+      "header": "Trafalgar",
+      "paragraph": "Statische Website - WORK IN PROGRESS",
+      "alt": "Trafalgar"
+    },
+    "portfolio": {
+      "header": "Portfolio",
+      "paragraph": "Portfolio website",
+      "alt": "Portfolio"
     }
   },
   "contact": {
