updated a project description

--- a/src/languages/deutsch.json
+++ b/src/languages/deutsch.json
@@ -47,7 +47,7 @@
     },
     "trafalgar": {
       "header": "Trafalgar",
-      "paragraph": "Statische Website - WORK IN PROGRESS",
+      "paragraph": "Statische Website - Herstellung nach bestehendem Design",
       "alt": "Trafalgar"
     },
     "portfolio": {
