--- a/src/languages/english.json
+++ b/src/languages/english.json
@@ -47,7 +47,7 @@
     },
     "trafalgar": {
       "header": "Trafalgar",
-      "paragraph": "Static website, building from an existing design - WORK IN PROGRESS",
+      "paragraph": "Static website - recreating an existing design",
       "alt": "Trafalgar"
     },
     "portfolio": {
