--- a/src/languages/hrvatski.json
+++ b/src/languages/hrvatski.json
@@ -47,7 +47,7 @@
     },
     "trafalgar": {
       "header": "Trafalgar",
-      "paragraph": "Staična web stranica, izrada prema postojećem dizajnu - WORK IN PROGRESS",
+      "paragraph": "Staična web stranica - izrada prema postojećem dizajnu",
       "alt": "Trafalgar"
     },
     "portfolio": {
